[tool.poetry]
name = "onlyfans"
version = "0.1.0"
description = ""
authors = ["john"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
urllib3 = "^2.0.6"
win32-setctime = "^1.1.0"
python-socks = {extras = ["asyncio"], version = "^2.4.3"}
psutil = "^5.9.6"
python-dateutil = "^2.8.2"
lxml = "^4.9.3"
mergedeep = "^1.3.4"
jsonpickle = "^3.0.2"
ujson = "^5.8.0"
sqlalchemy = "1.4.20"
alembic = "^1.12.0"
tqdm = ">=4.62.0"
selenium = "^4.14.0"
selenium-wire = "2.1.2"
user-agent = "^0.1.10"
aiohttp = "^3.8.6"
aiohttp-socks = "^0.8.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
